--- a/f1.html
+++ b/f1.html
@@ -10,6 +10,6 @@
     Neque ducimus doloremque dolore veritatis! Et deleniti dolorum iure praesentium reiciendis maiores
     , dolore, libero fugit magnam dignissimos, distinctio aspernatur delectus porro a!
 
-    <p>Ceci est mon fichier F1 de base</p>
+    <p>Ceci est mon fichier F1 qui est modifié</p>
 </body>
 </html>
