Modification de f2 sur la branche B

--- a/f2.html
+++ b/f2.html
@@ -10,6 +10,6 @@
     Neque ducimus doloremque dolore veritatis! Et deleniti dolorum iure praesentium reiciendis maiores
     , dolore, libero fugit magnam dignissimos, distinctio aspernatur delectus porro a!
 
-    <p>Ceci est mon fichier F2 de base qui lui aussi est modifié </p>
+    <p>Ceci est mon fichier F2 que je modifie sur la branche B  </p>
 </body>
 </html>
