modification du fichier f5 sur la branche A

--- a/f5.html
+++ b/f5.html
@@ -10,6 +10,6 @@
     Neque ducimus doloremque dolore veritatis! Et deleniti dolorum iure praesentium reiciendis maiores
     , dolore, libero fugit magnam dignissimos, distinctio aspernatur delectus porro a!
 
-    <p>Ceci est mon fichier F5 qui vient d'etre créé !!!!  </p>
+    <p>Ceci est mon fichier F5 qui vient d'etre créé et modifié sur la branche A !!!!  </p>
 </body>
 </html>
